Update po files

--- a/server/language/ar_DZ.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ar_DZ.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1886,6 +1886,12 @@ msgstr ""
 msgid "Delete without sending"
 msgstr ""
 
+msgid "Insufficient permissions"
+msgstr ""
+
+msgid "You have insufficient privileges to delete items in this folder."
+msgstr ""
+
 #, fuzzy
 msgid "Notify recipients"
 msgstr "المستلمين"
@@ -4004,9 +4010,6 @@ msgid "D {0}"
 msgstr ""
 
 msgid "D d-m"
-msgstr ""
-
-msgid "Insufficient permissions"
 msgstr ""
 
 msgid ""
