--- a/server/language/cs_CZ.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/cs_CZ.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1960,6 +1960,13 @@ msgid "Delete without sending"
 msgstr "Odstranit bez odesílání"
 
 #, fuzzy
+msgid "Insufficient permissions"
+msgstr "Nedostatečná práva"
+
+msgid "You have insufficient privileges to delete items in this folder."
+msgstr ""
+
+#, fuzzy
 msgid "Notify recipients"
 msgstr "Upravit příjemce"
 
@@ -4265,10 +4272,6 @@ msgstr ""
 #, fuzzy
 msgid "D d-m"
 msgstr "d-m-r"
-
-#, fuzzy
-msgid "Insufficient permissions"
-msgstr "Nedostatečná práva"
 
 msgid ""
 "Not enough permissions to open this store, do you want to remove it from the "
