--- a/server/language/en_US.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/en_US.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1815,6 +1815,12 @@ msgstr ""
 msgid "Delete without sending"
 msgstr ""
 
+msgid "Insufficient permissions"
+msgstr ""
+
+msgid "You have insufficient privileges to delete items in this folder."
+msgstr ""
+
 msgid "Notify recipients"
 msgstr ""
 
@@ -3896,9 +3902,6 @@ msgstr ""
 
 msgid "D d-m"
 msgstr "D m-d"
-
-msgid "Insufficient permissions"
-msgstr ""
 
 msgid ""
 "Not enough permissions to open this store, do you want to remove it from the "
