--- a/server/language/lt_LT.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/lt_LT.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1827,6 +1827,12 @@ msgstr ""
 msgid "Delete without sending"
 msgstr ""
 
+msgid "Insufficient permissions"
+msgstr ""
+
+msgid "You have insufficient privileges to delete items in this folder."
+msgstr ""
+
 msgid "Notify recipients"
 msgstr ""
 
@@ -3910,9 +3916,6 @@ msgid "D {0}"
 msgstr ""
 
 msgid "D d-m"
-msgstr ""
-
-msgid "Insufficient permissions"
 msgstr ""
 
 msgid ""
