--- a/server/language/ar_AE.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ar_AE.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1869,6 +1869,12 @@ msgstr ""
 msgid "Delete without sending"
 msgstr ""
 
+msgid "Insufficient permissions"
+msgstr ""
+
+msgid "You have insufficient privileges to delete items in this folder."
+msgstr ""
+
 msgid "Notify recipients"
 msgstr ""
 
@@ -3967,9 +3973,6 @@ msgid "D {0}"
 msgstr ""
 
 msgid "D d-m"
-msgstr ""
-
-msgid "Insufficient permissions"
 msgstr ""
 
 msgid ""
