--- a/server/language/ca_ES.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ca_ES.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1815,6 +1815,12 @@ msgstr ""
 msgid "Delete without sending"
 msgstr ""
 
+msgid "Insufficient permissions"
+msgstr ""
+
+msgid "You have insufficient privileges to delete items in this folder."
+msgstr ""
+
 msgid "Notify recipients"
 msgstr ""
 
@@ -3897,9 +3903,6 @@ msgid "D {0}"
 msgstr ""
 
 msgid "D d-m"
-msgstr ""
-
-msgid "Insufficient permissions"
 msgstr ""
 
 msgid ""
