--- a/server/language/da_DK.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/da_DK.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1900,6 +1900,13 @@ msgid "Delete without sending"
 msgstr "Slet uden at sende"
 
 #, fuzzy
+msgid "Insufficient permissions"
+msgstr "Ikke tilstrækkelige rettigheder"
+
+msgid "You have insufficient privileges to delete items in this folder."
+msgstr ""
+
+#, fuzzy
 msgid "Notify recipients"
 msgstr "Ret modtager"
 
@@ -4111,10 +4118,6 @@ msgstr ""
 #, fuzzy
 msgid "D d-m"
 msgstr "D, d.m.Y"
-
-#, fuzzy
-msgid "Insufficient permissions"
-msgstr "Ikke tilstrækkelige rettigheder"
 
 msgid ""
 "Not enough permissions to open this store, do you want to remove it from the "
