--- a/server/language/et_EE.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/et_EE.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1910,6 +1910,12 @@ msgstr ""
 msgid "Delete without sending"
 msgstr ""
 
+msgid "Insufficient permissions"
+msgstr ""
+
+msgid "You have insufficient privileges to delete items in this folder."
+msgstr ""
+
 #, fuzzy
 msgid "Notify recipients"
 msgstr "Palun täpsusta saaja"
@@ -4204,9 +4210,6 @@ msgid "D {0}"
 msgstr ""
 
 msgid "D d-m"
-msgstr ""
-
-msgid "Insufficient permissions"
 msgstr ""
 
 msgid ""
