--- a/server/language/fa_IR.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/fa_IR.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1806,6 +1806,12 @@ msgstr ""
 msgid "Delete without sending"
 msgstr ""
 
+msgid "Insufficient permissions"
+msgstr ""
+
+msgid "You have insufficient privileges to delete items in this folder."
+msgstr ""
+
 msgid "Notify recipients"
 msgstr ""
 
@@ -3882,9 +3888,6 @@ msgid "D {0}"
 msgstr ""
 
 msgid "D d-m"
-msgstr ""
-
-msgid "Insufficient permissions"
 msgstr ""
 
 msgid ""
