--- a/server/language/fr_CA.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/fr_CA.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1811,6 +1811,12 @@ msgstr ""
 msgid "Delete without sending"
 msgstr ""
 
+msgid "Insufficient permissions"
+msgstr ""
+
+msgid "You have insufficient privileges to delete items in this folder."
+msgstr ""
+
 msgid "Notify recipients"
 msgstr ""
 
@@ -3889,9 +3895,6 @@ msgid "D {0}"
 msgstr ""
 
 msgid "D d-m"
-msgstr ""
-
-msgid "Insufficient permissions"
 msgstr ""
 
 msgid ""
