--- a/server/language/he_IL.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/he_IL.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1973,6 +1973,13 @@ msgid "Delete without sending"
 msgstr "מחק בלי לשלוח"
 
 #, fuzzy
+msgid "Insufficient permissions"
+msgstr "הרשאות תיקיה"
+
+msgid "You have insufficient privileges to delete items in this folder."
+msgstr ""
+
+#, fuzzy
 msgid "Notify recipients"
 msgstr "ערוך נמען"
 
@@ -4259,10 +4266,6 @@ msgstr ""
 #, fuzzy
 msgid "D d-m"
 msgstr "ש-ח-י"
-
-#, fuzzy
-msgid "Insufficient permissions"
-msgstr "הרשאות תיקיה"
 
 msgid ""
 "Not enough permissions to open this store, do you want to remove it from the "
