--- a/server/language/hu_HU.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/hu_HU.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1992,6 +1992,13 @@ msgid "Delete without sending"
 msgstr "Törlés küldés nélkül"
 
 #, fuzzy
+msgid "Insufficient permissions"
+msgstr "Nincs elég jogosultsága"
+
+msgid "You have insufficient privileges to delete items in this folder."
+msgstr ""
+
+#, fuzzy
 msgid "Notify recipients"
 msgstr "Címzett szerkesztése"
 
@@ -4290,10 +4297,6 @@ msgstr ""
 #, fuzzy
 msgid "D d-m"
 msgstr "Y-m-d D"
-
-#, fuzzy
-msgid "Insufficient permissions"
-msgstr "Nincs elég jogosultsága"
 
 msgid ""
 "Not enough permissions to open this store, do you want to remove it from the "
