--- a/server/language/ja_JP.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ja_JP.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1925,6 +1925,13 @@ msgid "Delete without sending"
 msgstr "送信せずに削除"
 
 #, fuzzy
+msgid "Insufficient permissions"
+msgstr "フォルダ アクセス権"
+
+msgid "You have insufficient privileges to delete items in this folder."
+msgstr ""
+
+#, fuzzy
 msgid "Notify recipients"
 msgstr "受信者を編集します。"
 
@@ -4206,10 +4213,6 @@ msgstr ""
 #, fuzzy
 msgid "D d-m"
 msgstr "Y/m/d"
-
-#, fuzzy
-msgid "Insufficient permissions"
-msgstr "フォルダ アクセス権"
 
 msgid ""
 "Not enough permissions to open this store, do you want to remove it from the "
