--- a/server/language/ko_KR.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ko_KR.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1798,6 +1798,12 @@ msgstr ""
 msgid "Delete without sending"
 msgstr ""
 
+msgid "Insufficient permissions"
+msgstr ""
+
+msgid "You have insufficient privileges to delete items in this folder."
+msgstr ""
+
 msgid "Notify recipients"
 msgstr ""
 
@@ -3871,9 +3877,6 @@ msgid "D {0}"
 msgstr ""
 
 msgid "D d-m"
-msgstr ""
-
-msgid "Insufficient permissions"
 msgstr ""
 
 msgid ""
