--- a/server/language/pl_PL.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/pl_PL.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1875,6 +1875,12 @@ msgstr "Usuń i wyślij organizatorowi odpowiedź"
 msgid "Delete without sending"
 msgstr "Usuń bez odpowiedzi"
 
+msgid "Insufficient permissions"
+msgstr "Niewystarczające uprawnienia"
+
+msgid "You have insufficient privileges to delete items in this folder."
+msgstr ""
+
 msgid "Notify recipients"
 msgstr "Powiadomić odbiorcę"
 
@@ -4031,9 +4037,6 @@ msgstr "D {0}"
 
 msgid "D d-m"
 msgstr "D, d-m-r"
-
-msgid "Insufficient permissions"
-msgstr "Niewystarczające uprawnienia"
 
 msgid ""
 "Not enough permissions to open this store, do you want to remove it from the "
