--- a/server/language/pt_PT.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/pt_PT.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -9,8 +9,8 @@ msgstr ""
 "POT-Creation-Date: 2019-09-25 14:32+0200\n"
 "PO-Revision-Date: 2021-03-04 12:17+0000\n"
 "Last-Translator: Nuno Jerónimo <nuno.jeronimo@valsousa.pt>\n"
-"Language-Team: Portuguese (Portugal) "
-"<http://translate.kopano.io/projects/kopano/kopano-webapp/pt_PT/>\n"
+"Language-Team: Portuguese (Portugal) <http://translate.kopano.io/projects/"
+"kopano/kopano-webapp/pt_PT/>\n"
 "Language: pt_PT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
@@ -1861,6 +1861,12 @@ msgstr "Eliminar e enviar uma resposta ao organizador"
 
 msgid "Delete without sending"
 msgstr "Eliminar sem enviar"
+
+msgid "Insufficient permissions"
+msgstr "Permissões insuficientes"
+
+msgid "You have insufficient privileges to delete items in this folder."
+msgstr ""
 
 msgid "Notify recipients"
 msgstr "Notificar destinatários"
@@ -4007,9 +4013,6 @@ msgstr "D {0}"
 
 msgid "D d-m"
 msgstr "D d-m"
-
-msgid "Insufficient permissions"
-msgstr "Permissões insuficientes"
 
 msgid ""
 "Not enough permissions to open this store, do you want to remove it from the "
