--- a/server/language/ru_RU.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ru_RU.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1954,6 +1954,13 @@ msgid "Delete without sending"
 msgstr "Удалить без отправки"
 
 #, fuzzy
+msgid "Insufficient permissions"
+msgstr "Недостаточно прав"
+
+msgid "You have insufficient privileges to delete items in this folder."
+msgstr ""
+
+#, fuzzy
 msgid "Notify recipients"
 msgstr "Изменить получателя"
 
@@ -4212,10 +4219,6 @@ msgstr ""
 #, fuzzy
 msgid "D d-m"
 msgstr "d-m-Y"
-
-#, fuzzy
-msgid "Insufficient permissions"
-msgstr "Недостаточно прав"
 
 msgid ""
 "Not enough permissions to open this store, do you want to remove it from the "
