--- a/server/language/tr_TR.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/tr_TR.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1972,6 +1972,13 @@ msgid "Delete without sending"
 msgstr "Göndermeden sil"
 
 #, fuzzy
+msgid "Insufficient permissions"
+msgstr "yetersiz yetki"
+
+msgid "You have insufficient privileges to delete items in this folder."
+msgstr ""
+
+#, fuzzy
 msgid "Notify recipients"
 msgstr "Alıcı düzenle"
 
@@ -4292,10 +4299,6 @@ msgstr ""
 #, fuzzy
 msgid "D d-m"
 msgstr "d-m-Y"
-
-#, fuzzy
-msgid "Insufficient permissions"
-msgstr "yetersiz yetki"
 
 msgid ""
 "Not enough permissions to open this store, do you want to remove it from the "
