Update po files

--- a/server/language/cs_CZ.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/cs_CZ.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1800,8 +1800,8 @@ msgid "Today (all day)"
 msgstr ""
 
 # 100%
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME - STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME - USERNAME".
 #, fuzzy
 msgid "{0} - {1}"
 msgstr "{0} v {1}"
@@ -4598,6 +4598,9 @@ msgstr "Odstranit složku"
 msgid "Are you sure you want to empty {0}?"
 msgstr "Opravdu chcete vyprázdnit {0}?"
 
+msgid "Show All"
+msgstr ""
+
 msgid "Show all folders"
 msgstr "Všechny složky"
 
@@ -5228,6 +5231,9 @@ msgid "Show unread mail counter in application title"
 msgstr ""
 
 msgid "Hide widget panel"
+msgstr ""
+
+msgid "Show search bar above folder list"
 msgstr ""
 
 msgid "Auto"
