--- a/server/language/he_IL.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/he_IL.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1831,8 +1831,8 @@ msgstr "היום: {1} {0}"
 msgid "Today (all day)"
 msgstr ""
 
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME - STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME - USERNAME".
 msgid "{0} - {1}"
 msgstr ""
 
@@ -4592,6 +4592,9 @@ msgstr "מחק תיקיה"
 msgid "Are you sure you want to empty {0}?"
 msgstr "האם אתה בטוח כי ברצונך לרוקן את {0}?"
 
+msgid "Show All"
+msgstr ""
+
 # 75%
 #, fuzzy
 msgid "Show all folders"
@@ -5224,6 +5227,9 @@ msgid "Show unread mail counter in application title"
 msgstr ""
 
 msgid "Hide widget panel"
+msgstr ""
+
+msgid "Show search bar above folder list"
 msgstr ""
 
 msgid "Auto"
