--- a/server/language/nb_NO.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/nb_NO.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1778,8 +1778,8 @@ msgstr "I dag: {0} - {1}"
 msgid "Today (all day)"
 msgstr "I dag (hele dagen)"
 
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME - STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME - USERNAME".
 msgid "{0} - {1}"
 msgstr "{0} - {1}"
 
@@ -4451,6 +4451,9 @@ msgstr "Slett mappe"
 msgid "Are you sure you want to empty {0}?"
 msgstr "Er du sikker på at du vil tømme {0}?"
 
+msgid "Show All"
+msgstr ""
+
 msgid "Show all folders"
 msgstr "Vis alle mapper"
 
@@ -5049,6 +5052,9 @@ msgid "Show unread mail counter in application title"
 msgstr ""
 
 msgid "Hide widget panel"
+msgstr ""
+
+msgid "Show search bar above folder list"
 msgstr ""
 
 msgid "Auto"
