--- a/server/language/pt_PT.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/pt_PT.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1712,8 +1712,8 @@ msgstr "Hoje {0} - {1}"
 msgid "Today (all day)"
 msgstr "Hoje (todo dia)"
 
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME - STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME - USERNAME".
 msgid "{0} - {1}"
 msgstr "{0} - {1}"
 
@@ -4313,6 +4313,9 @@ msgstr "Eliminar pasta"
 msgid "Are you sure you want to empty {0}?"
 msgstr "Tem certeza de que quer esvaziar {0}?"
 
+msgid "Show All"
+msgstr ""
+
 msgid "Show all folders"
 msgstr "Mostar todas as pastas"
 
@@ -4900,6 +4903,9 @@ msgid "Show unread mail counter in application title"
 msgstr "Mostrar número de mensagens por ler no título da aplicação"
 
 msgid "Hide widget panel"
+msgstr ""
+
+msgid "Show search bar above folder list"
 msgstr ""
 
 msgid "Auto"
