--- a/server/language/sl_SI.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/sl_SI.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1832,8 +1832,8 @@ msgstr "Danes: {1} {0}"
 msgid "Today (all day)"
 msgstr ""
 
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME - STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME - USERNAME".
 #, fuzzy
 msgid "{0} - {1}"
 msgstr "{0} v {1}"
@@ -4664,6 +4664,9 @@ msgstr "Izbriši mapo"
 msgid "Are you sure you want to empty {0}?"
 msgstr "Ali ste prepričani, da želite izprazniti {0}\"?"
 
+msgid "Show All"
+msgstr ""
+
 msgid "Show all folders"
 msgstr "Pokaži vse mape"
 
@@ -5294,6 +5297,9 @@ msgid "Show unread mail counter in application title"
 msgstr ""
 
 msgid "Hide widget panel"
+msgstr ""
+
+msgid "Show search bar above folder list"
 msgstr ""
 
 msgid "Auto"
