--- a/server/language/ar_DZ.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ar_DZ.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1745,8 +1745,8 @@ msgstr ""
 msgid "Today (all day)"
 msgstr ""
 
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME - STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME - USERNAME".
 msgid "{0} - {1}"
 msgstr ""
 
@@ -4311,6 +4311,9 @@ msgstr "حذف تاريخ المجلد"
 msgid "Are you sure you want to empty {0}?"
 msgstr ""
 
+msgid "Show All"
+msgstr ""
+
 msgid "Show all folders"
 msgstr ""
 
@@ -4898,6 +4901,9 @@ msgid "Show unread mail counter in application title"
 msgstr ""
 
 msgid "Hide widget panel"
+msgstr ""
+
+msgid "Show search bar above folder list"
 msgstr ""
 
 msgid "Auto"
