--- a/server/language/da_DK.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/da_DK.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1740,8 +1740,8 @@ msgstr "I dag: {1} {0}"
 msgid "Today (all day)"
 msgstr ""
 
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME - STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME - USERNAME".
 #, fuzzy
 msgid "{0} - {1}"
 msgstr "{0} i {1}"
@@ -4436,6 +4436,9 @@ msgstr "Slet mappe"
 msgid "Are you sure you want to empty {0}?"
 msgstr "Er du sikker på du vil tømme {0}?"
 
+msgid "Show All"
+msgstr ""
+
 msgid "Show all folders"
 msgstr "Vis alle mapper"
 
@@ -5042,6 +5045,9 @@ msgid "Show unread mail counter in application title"
 msgstr ""
 
 msgid "Hide widget panel"
+msgstr ""
+
+msgid "Show search bar above folder list"
 msgstr ""
 
 msgid "Auto"
