--- a/server/language/de_DE.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/de_DE.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1808,8 +1808,8 @@ msgid "Today (all day)"
 msgstr "Heute (ganztägig)"
 
 # 100%
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME - STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME - USERNAME".
 msgid "{0} - {1}"
 msgstr "{0} - {1}"
 
@@ -4577,6 +4577,9 @@ msgstr "Ordner löschen"
 msgid "Are you sure you want to empty {0}?"
 msgstr "Sind Sie sicher, dass {0} geleert werden soll?"
 
+msgid "Show All"
+msgstr ""
+
 # 75%
 msgid "Show all folders"
 msgstr "Alle Unterordner anzeigen"
@@ -5209,6 +5212,9 @@ msgid "Show unread mail counter in application title"
 msgstr "Zeige Anzahl ungelesener Nachrichten im Titel"
 
 msgid "Hide widget panel"
+msgstr ""
+
+msgid "Show search bar above folder list"
 msgstr ""
 
 msgid "Auto"
