--- a/server/language/et_EE.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/et_EE.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1769,8 +1769,8 @@ msgstr ""
 msgid "Today (all day)"
 msgstr ""
 
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME - STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME - USERNAME".
 msgid "{0} - {1}"
 msgstr ""
 
@@ -4516,6 +4516,9 @@ msgstr "Kadunud kaustad"
 msgid "Are you sure you want to empty {0}?"
 msgstr ""
 
+msgid "Show All"
+msgstr ""
+
 msgid "Show all folders"
 msgstr ""
 
@@ -5141,6 +5144,9 @@ msgid "Show unread mail counter in application title"
 msgstr ""
 
 msgid "Hide widget panel"
+msgstr ""
+
+msgid "Show search bar above folder list"
 msgstr ""
 
 msgid "Auto"
