--- a/server/language/fa_IR.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/fa_IR.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1665,8 +1665,8 @@ msgstr ""
 msgid "Today (all day)"
 msgstr ""
 
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME - STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME - USERNAME".
 msgid "{0} - {1}"
 msgstr ""
 
@@ -4178,6 +4178,9 @@ msgstr ""
 msgid "Are you sure you want to empty {0}?"
 msgstr ""
 
+msgid "Show All"
+msgstr ""
+
 msgid "Show all folders"
 msgstr ""
 
@@ -4759,6 +4762,9 @@ msgid "Show unread mail counter in application title"
 msgstr ""
 
 msgid "Hide widget panel"
+msgstr ""
+
+msgid "Show search bar above folder list"
 msgstr ""
 
 msgid "Auto"
