--- a/server/language/fi_FI.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/fi_FI.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1806,8 +1806,8 @@ msgstr "Tänään: {1} {0}"
 msgid "Today (all day)"
 msgstr ""
 
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME - STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME - USERNAME".
 #, fuzzy
 msgid "{0} - {1}"
 msgstr "{0} {1}"
@@ -4581,6 +4581,9 @@ msgstr "Poista kansio"
 msgid "Are you sure you want to empty {0}?"
 msgstr "Haluatko varmasti tyhjentää kohteen {0}?"
 
+msgid "Show All"
+msgstr ""
+
 msgid "Show all folders"
 msgstr "Näytä kaikki kansiot"
 
@@ -5211,6 +5214,9 @@ msgid "Show unread mail counter in application title"
 msgstr ""
 
 msgid "Hide widget panel"
+msgstr ""
+
+msgid "Show search bar above folder list"
 msgstr ""
 
 msgid "Auto"
