--- a/server/language/it_IT.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/it_IT.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1807,8 +1807,8 @@ msgid "Today (all day)"
 msgstr ""
 
 # 100%
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME - STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME - USERNAME".
 #, fuzzy
 msgid "{0} - {1}"
 msgstr "{0} in {1}"
@@ -4585,6 +4585,9 @@ msgstr "Elimina cartella"
 msgid "Are you sure you want to empty {0}?"
 msgstr "Sei sicuro di voler svuotare la cartella {0}?"
 
+msgid "Show All"
+msgstr ""
+
 # 75%
 msgid "Show all folders"
 msgstr "Mostra tutte le cartelle"
@@ -5212,6 +5215,9 @@ msgid "Show unread mail counter in application title"
 msgstr "Mostra il contatore della posta non letta nel titolo dell'applicazione"
 
 msgid "Hide widget panel"
+msgstr ""
+
+msgid "Show search bar above folder list"
 msgstr ""
 
 msgid "Auto"
