--- a/server/language/pt_BR.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/pt_BR.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1798,8 +1798,8 @@ msgid "Today (all day)"
 msgstr ""
 
 # 100%
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME - STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME - USERNAME".
 #, fuzzy
 msgid "{0} - {1}"
 msgstr "{0} em {1}"
@@ -4556,6 +4556,9 @@ msgstr "Excluir pasta"
 msgid "Are you sure you want to empty {0}?"
 msgstr "Você tem certeza de que você quer esvaziar {0}?"
 
+msgid "Show All"
+msgstr ""
+
 msgid "Show all folders"
 msgstr "Todas as pastas"
 
@@ -5185,6 +5188,9 @@ msgid "Show unread mail counter in application title"
 msgstr ""
 
 msgid "Hide widget panel"
+msgstr ""
+
+msgid "Show search bar above folder list"
 msgstr ""
 
 msgid "Auto"
