--- a/server/language/ru_RU.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ru_RU.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1792,8 +1792,8 @@ msgid "Today (all day)"
 msgstr ""
 
 # 100%
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME - STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME - USERNAME".
 #, fuzzy
 msgid "{0} - {1}"
 msgstr "{0} в {1}"
@@ -4538,6 +4538,9 @@ msgstr "Удалить папку"
 msgid "Are you sure you want to empty {0}?"
 msgstr "Вы действительно хотите очистить «{0}»?"
 
+msgid "Show All"
+msgstr ""
+
 # 75%
 msgid "Show all folders"
 msgstr "Все каталоги"
@@ -5154,6 +5157,9 @@ msgid "Show unread mail counter in application title"
 msgstr ""
 
 msgid "Hide widget panel"
+msgstr ""
+
+msgid "Show search bar above folder list"
 msgstr ""
 
 msgid "Auto"
