--- a/server/language/tr_TR.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/tr_TR.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1816,8 +1816,8 @@ msgid "Today (all day)"
 msgstr ""
 
 # 100%
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME - STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME - USERNAME".
 #, fuzzy
 msgid "{0} - {1}"
 msgstr "{0} - {1}"
@@ -4625,6 +4625,9 @@ msgstr "Klasörü sil"
 msgid "Are you sure you want to empty {0}?"
 msgstr "{0} Boşaltmak istediğinizden emin misiniz?"
 
+msgid "Show All"
+msgstr ""
+
 msgid "Show all folders"
 msgstr "Tüm klasörleri göster"
 
@@ -5250,6 +5253,9 @@ msgid "Show unread mail counter in application title"
 msgstr ""
 
 msgid "Hide widget panel"
+msgstr ""
+
+msgid "Show search bar above folder list"
 msgstr ""
 
 msgid "Auto"
