--- a/server/language/zh_CN.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/zh_CN.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1703,8 +1703,8 @@ msgstr "今天（全天）"
 
 # 86%
 # 100%
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME - STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME - USERNAME".
 msgid "{0} - {1}"
 msgstr "{0}-{1}"
 
@@ -4265,6 +4265,9 @@ msgstr "删除文件夹"
 msgid "Are you sure you want to empty {0}?"
 msgstr "您是否确定清空{0}？"
 
+msgid "Show All"
+msgstr ""
+
 msgid "Show all folders"
 msgstr "显示所有文件夹"
 
@@ -4852,6 +4855,9 @@ msgid "Show unread mail counter in application title"
 msgstr "在应用程序标题中显示未读邮件计数器"
 
 msgid "Hide widget panel"
+msgstr ""
+
+msgid "Show search bar above folder list"
 msgstr ""
 
 msgid "Auto"
