--- a/server/language/zh_TW.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/zh_TW.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -1754,8 +1754,8 @@ msgid "Today (all day)"
 msgstr ""
 
 # 100%
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME - STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME - USERNAME".
 #, fuzzy
 msgid "{0} - {1}"
 msgstr "{0} 在 {1}"
@@ -4468,6 +4468,9 @@ msgstr "刪除資料夾"
 msgid "Are you sure you want to empty {0}?"
 msgstr "您確定要清空{0}?"
 
+msgid "Show All"
+msgstr ""
+
 msgid "Show all folders"
 msgstr "顯示所有資料夾"
 
@@ -5090,6 +5093,9 @@ msgid "Show unread mail counter in application title"
 msgstr ""
 
 msgid "Hide widget panel"
+msgstr ""
+
+msgid "Show search bar above folder list"
 msgstr ""
 
 msgid "Auto"
